test/library/packages/OrderedMap/init/testInitGenericError.good
$CHPL_HOME/modules/packages/OrderedMap.chpl:nnnn: In initializer:
$CHPL_HOME/modules/packages/OrderedMap.chpl:nnnn: warning: creating a orderedMap with key type C
$CHPL_HOME/modules/packages/OrderedMap.chpl:nnnn: warning: which now means class type with generic management
$CHPL_HOME/modules/packages/OrderedMap.chpl:nnnn: error: orderedMap key type cannot currently be generic
  testInitGenericError.chpl:9: called as orderedMap.init(type keyType = C, type valType = int(64), param parSafe = false, comparator: DefaultComparator)
